[package]
name = "iced_app"
version = "0.1.0"
authors = ["aleksandrklokov"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = "0.1"
server = { path = "/Users/aleksandrklokov/Documents/projects/rust/diplom_project/server" }
libloading = "0.5"
